Update links and contact details

--- a/arne/index.html
+++ b/arne/index.html
@@ -105,13 +105,15 @@ abbr { text-decoration: none; }
 	<br>Am Schlagbaum 4
 	<br>51709 Marienheide
 	<br>Germany <img src="data:image/gif;base64,R0lGODlhEAAMAJEAAAAAAP8AAP%2FMAAAAACH5BAAAAAAALAAAAAAQAAwAAAIVhI%2Bpy%2B0dopy02oszFrz7D4biSI4FADs%3D" alt="" style="border: 1px solid white; vertical-align: top; margin-left: .2em; position: relative; top: .1ex">
-	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:arne-9544@thaw.de rel=author>arne-9544@thaw.de</a>
-	<li><span class=type title="landline phone (with voice mail; good for use 24/7)">voice</span> <a href=tel:+49.2264.4194994>+49 2264 4194994</a>
+	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:aj22@thaw.de rel=author>aj22@thaw.de</a>
+	<li><span class=type title="landline phone (with voice mail; good for use 24/7)">phone</span> <a href=tel:+49.2264.2870877>+49 2264 2870877</a>
+<!--
 	<br><span class=type title="facsimile (not secure)">fax</span> <a href=tel:+49.2264.4194995>+49 2264 4194995</a>
 	<li><span class=type title="XMPP / Jabber chat">xmpp</span> <abbr title="on request only">O/R</abbr>
+-->
 	<li><span class=type title="OpenPGP key">pgp</span> <a href=pgp/75EB52B0.asc rel=pgpkey>6e73 c112 75eb 52b0</a>
 	<li><span class=how>languages</span> <abbr title=English>EN</abbr>, <abbr title=German>DE</abbr>, <abbr title=Norwegian>NO</abbr>
-	<br><span class=how>pronouns</span> he / him / his
+	<br><span class=how>pronouns</span> he / him
 </ul>
 <ul id=services><!-- semantically perhaps <section> or <nav> -->
 	<li><a href=//github.com/johannessen>GitHub</a>
@@ -124,12 +126,12 @@ abbr { text-decoration: none; }
 	<br><a href=//software.thaw.de/>THAWsoftware</a>
 </ul>
 <ul id=projects><!-- semantically perhaps <section> or <nav> -->
-	<li><a href=//brucher.info/ hreflang=de>brucher.info</a>
+	<li><a href=/brucher-info/ hreflang=de>brucher.info</a>
 	<br><a href=//xn--lve-zna.de/>ølve.de</a>
 	<li><a href=/nm/>Notices to Mariners</a>
 	<br><a href=//twitter.com/slaggrunnslinje>Slaggrunnslinje</a>
 	<li><a>Blog</a>
-	<br><a href=//xn--lve-zna.de/jobs.pl>Jobs</a>
+	<br><a href=/jobs>Jobs</a>
 	<li><a href=/thesis/>Thesis</a>
 	<br><a href=/~joar0011/ hreflang=de>Teaching</a>
 	<li><a href=/Attic>Attic</a>
