Update snail mail

--- a/arne/index.html
+++ b/arne/index.html
@@ -102,9 +102,9 @@ abbr { text-decoration: none; }
 <footer>
 <ul id=comm><!-- semantically perhaps <section> or <address> -->
 	<li>Arne Johannessen
-	<br>Am Schlagbaum 4
-	<br>51709 Marienheide
-	<br>Germany <img src="data:image/gif;base64,R0lGODlhEAAMAJEAAAAAAP8AAP%2FMAAAAACH5BAAAAAAALAAAAAAQAAwAAAIVhI%2Bpy%2B0dopy02oszFrz7D4biSI4FADs%3D" alt="" style="border: 1px solid white; vertical-align: top; margin-left: .2em; position: relative; top: .1ex">
+	<br>Kyrkjebygdvegen 156
+	<br>5636 Varaldsøy
+	<br>Norway <img src="data:image/gif;base64,R0lGODlhFgAQAJEAAMgQAAAgW////wAAACH5BAAAAAAALAAAAAAWABAAAAIvhC8Rcu2f1psuMootzupu2H2AQJaWiZbKyrbuC8fpOZugJFZh3mg8svuNgj/fpgAAOw==" alt="" style="vertical-align: top; margin-left: .2em; position: relative; top: .1ex">
 	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:aj22@thaw.de rel=author>aj22@thaw.de</a>
 	<li><span class=type title="landline phone (with voice mail; good for use 24/7)">phone</span> <a href=tel:+49.2264.2870877>+49 2264 2870877</a>
 <!--
