Change phone number label back to "voice"
Emphasise that texts may not go through (they typically do when sent from German phones, but SMS delivery is always just on a best-effort basis, so please don't ever depend upon it).

--- a/arne/index.html
+++ b/arne/index.html
@@ -106,7 +106,7 @@ abbr { text-decoration: none; }
 	<br>5636 Varaldsøy
 	<br>Norway <img src="data:image/gif;base64,R0lGODlhFgAQAJEAAMgQAAAgW////wAAACH5BAAAAAAALAAAAAAWABAAAAIvhC8Rcu2f1psuMootzupu2H2AQJaWiZbKyrbuC8fpOZugJFZh3mg8svuNgj/fpgAAOw==" alt="" style="vertical-align: top; margin-left: .2em; position: relative; top: .1ex">
 	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:aj22@thaw.de rel=author>aj22@thaw.de</a>
-	<li><span class=type title="landline phone (with voice mail; good for use 24/7)">phone</span> <a href=tel:+49.2264.2870877>+49 2264 2870877</a>
+	<li><span class=type title="landline phone (with voice mail; good for calls 24/7; not good for texts)">voice</span> <a href=tel:+49.2264.2870877>+49 2264 2870877</a>
 <!--
 	<br><span class=type title="facsimile (not secure)">fax</span> <a href=tel:+49.2264.4194995>+49 2264 4194995</a>
 	<li><span class=type title="XMPP / Jabber chat">xmpp</span> <abbr title="on request only">O/R</abbr>
