--- a/arne/Attic/Attic.html
+++ b/arne/Attic/Attic.html
@@ -49,22 +49,24 @@ h1 { font-size: 1.5em; margin-bottom: 1ex; }
 
 <ul>
 <li><a href=/test/1533J/ lang=de hreflang=de>Blatteinteilung Seegrundkarten Brucher</a> (1533J)
-<li><a href=/temp/job1541/ lang=no hreflang=de>Flyplasser Nordvestlandet</a> (1541J)
+<li><a href=/Attic/job1541/ lang=no hreflang=de>Flyplasser Nordvestlandet</a> (1541J)
 <li><a href=https://trude.johannessen.de/7065/ lang=no hreflang=no>Kollektivtrafikk Marienheide–Gummersbach</a> (1571J)
-<li><a href=/osm/1630J.pdf lang=de hreflang=de type=application/pdf>Stadtplan Leirvik</a> (1.3 MB – 1630J)
+<li><a href=/Attic/osm/1630J.pdf lang=de hreflang=de type=application/pdf>Stadtplan Leirvik</a> (1.3 MB – 1630J)
 </ul>
 
 <ul>
-<li><a href=/test/axonometrie.pl>Axonometry</a>
+<li><a href=/Attic/axonometrie.pl>Axonometry</a>
 <li><a href=https://dev.thaw.de/temp/chess-importer.js>Chess.app importer</a>
+<!--
 <li><a href=/osm/geocode-adapter/>Geocoding adapter</a> (partly defunct)
+-->
 <li><a href=/test/nrk.html hreflang=no>NRK radio streams</a>
 <li><a href=https://dev.thaw.de/attic/timezones.txt.utf8 hreflang=de>Time zones</a>
 </ul>
 
 <ul>
-<li><a href=/test/LowFriction/ hreflang=de>Low Friction data</a>
-<li><a href=/test/Poster/ hreflang=de>Low Friction poster</a>
+<li><a href=/Attic/LowFriction/ hreflang=de>Low Friction data</a>
+<li><a href=/Attic/LowFriction-Poster/ hreflang=de>Low Friction poster</a>
 </ul>
 
 <ul>
