--- a/arne/Attic/osm/geocode-adapter/kartverket/index.html
+++ b/arne/Attic/osm/geocode-adapter/kartverket/index.html
@@ -125,8 +125,9 @@ window.onload = function () {
 	}
 }
 </script>
-<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
-<script src="http://openlayers.org/api/OpenLayers.js"></script>
+<script src="//maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
+<!--script src="//openlayers.org/api/OpenLayers.js"></script-->
+<script src="/osm/lib/OpenLayers.js"></script>
 <!--script src="http://dev.openlayers.org/releases/OpenLayers-2.12/lib/OpenLayers.js"></script-->
 <script src="tile.statkart.js"></script>
 <script src="tile.dfs.js"></script>
