--- a/arne/index.html
+++ b/arne/index.html
@@ -102,8 +102,8 @@ abbr { text-decoration: none; }
 <footer>
 <ul id=comm><!-- semantically perhaps <section> or <address> -->
 	<li>Arne Johannessen
-	<br>Kyrkjebygdvegen 156
-	<br>5636 Varaldsøy
+	<br>Saudalskleivane 1
+	<br>5136 Mjølkeråen
 	<br>Norway <img src="data:image/gif;base64,R0lGODlhFgAQAJEAAMgQAAAgW////wAAACH5BAAAAAAALAAAAAAWABAAAAIvhC8Rcu2f1psuMootzupu2H2AQJaWiZbKyrbuC8fpOZugJFZh3mg8svuNgj/fpgAAOw==" alt="" style="vertical-align: top; margin-left: .2em; position: relative; top: .1ex">
 	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:aj22@thaw.de rel=author>aj22@thaw.de</a>
 	<li><span class=type title="landline phone (with voice mail; good for calls 24/7; not good for texts)">voice</span> <a href=tel:+49.2264.2870877>+49 2264 2870877</a>
@@ -111,16 +111,15 @@ abbr { text-decoration: none; }
 	<br><span class=type title="facsimile (not secure)">fax</span> <a href=tel:+49.2264.4194995>+49 2264 4194995</a>
 	<li><span class=type title="XMPP / Jabber chat">xmpp</span> <abbr title="on request only">O/R</abbr>
 -->
-	<li><span class=type title="OpenPGP key">pgp</span> <a href=pgp/75EB52B0.asc rel=pgpkey>6e73 c112 75eb 52b0</a>
+	<li><span class=type title="OpenPGP key">pgp</span> <a href=pgp/B36D5E19.asc rel=pgpkey>9753 110e b36d 5e19</a>
 	<li><span class=how>languages</span> <abbr title=English>EN</abbr>, <abbr title=German>DE</abbr>, <abbr title=Norwegian>NO</abbr>
 	<br><span class=how>pronouns</span> he / him
 </ul>
 <ul id=services><!-- semantically perhaps <section> or <nav> -->
 	<li><a href=//github.com/johannessen>GitHub</a>
 	<br><a href=//metacpan.org/author/AJNN>CPAN</a>
-	<li><a href=//mastodon.social/@johannessen rel=me>Fediverse</a>
-	<br><a href=//twitter.com/ArneJohannessen rel=me>Twitter</a>
-	<br><a href=//keybase.io/johannessen rel=me>Keybase</a>
+	<li><a href=https://snabelen.no/@ajnn rel=me>Fediverse 1</a>
+	<br><a href=https://medibubble.org/@ajnn rel=me>Fediverse 2</a>
 	<li><a href=//wiki.openstreetmap.org/wiki/User:Arne_Johannessen>OpenStreetMap</a>
 	<li><a href=//www.skgb.de/ hreflang=de onclick="location.href='https://www.skgb.de/author/arne';return false;">SKGB</a>
 	<br><a href=//software.thaw.de/>THAWsoftware</a>
@@ -129,9 +128,9 @@ abbr { text-decoration: none; }
 	<li><a href=/brucher-info/ hreflang=de>brucher.info</a>
 	<br><a href=//xn--lve-zna.de/>ølve.de</a>
 	<li><a href=/nm/>Notices to Mariners</a>
-	<br><a href=//twitter.com/slaggrunnslinje>Slaggrunnslinje</a>
-	<li><a>Blog</a>
-	<br><a href=/jobs>Jobs</a>
+	<br><a href=//twitter.com/slaggrunnslinje onclick="location.href='/Attic/slaggrunnslinje/';return false;">Slaggrunnslinje</a>
+	<li><a href=/jobs>Jobs</a>
+	<br><a>Blog</a>
 	<li><a href=/thesis/>Thesis</a>
 	<br><a href=/~joar0011/ hreflang=de>Teaching</a>
 	<li><a href=/Attic>Attic</a>
