--- a/arne/Attic/Attic.html
+++ b/arne/Attic/Attic.html
@@ -48,6 +48,10 @@ h1 { font-size: 1.5em; margin-bottom: 1ex; }
 <p>Some of the stuff on this list is literally several decades old. I try to keep it online mainly because <a href=https://www.w3.org/Provider/Style/URI>cool URIs don’t change</a>. Items are listed in no particular order, though newer stuff tends to be closer to the top.
 
 <ul>
+<li><a href=https://shannon.thaw.de/schrodingers-door>Schrödinger’s Door: A tribute to Tau Station</a>
+</ul>
+
+<ul>
 <li><a href=/test/1533J/ lang=de hreflang=de>Blatteinteilung Seegrundkarten Brucher</a> (1533J)
 <li><a href=/Attic/job1541/ lang=no hreflang=de>Flyplasser Nordvestlandet</a> (1541J)
 <li><a href=https://trude.johannessen.de/7065/ lang=no hreflang=no>Kollektivtrafikk Marienheide–Gummersbach</a> (1571J)
