--- a/arne/index.html
+++ b/arne/index.html
@@ -106,7 +106,10 @@ abbr { text-decoration: none; }
 	<br>5136 Mjølkeråen
 	<br>Norway <img src="data:image/gif;base64,R0lGODlhFgAQAJEAAMgQAAAgW////wAAACH5BAAAAAAALAAAAAAWABAAAAIvhC8Rcu2f1psuMootzupu2H2AQJaWiZbKyrbuC8fpOZugJFZh3mg8svuNgj/fpgAAOw==" alt="" style="vertical-align: top; margin-left: .2em; position: relative; top: .1ex">
 	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:aj22@thaw.de rel=author>aj22@thaw.de</a>
+<!--
 	<li><span class=type title="landline phone (with voice mail; good for calls 24/7; not good for texts)">voice</span> <a href=tel:+49.2264.2870877>+49 2264 2870877</a>
+	<li><span class=type>voice</span> temporarily unavailable
+-->
 <!--
 	<br><span class=type title="facsimile (not secure)">fax</span> <a href=tel:+49.2264.4194995>+49 2264 4194995</a>
 	<li><span class=type title="XMPP / Jabber chat">xmpp</span> <abbr title="on request only">O/R</abbr>
@@ -118,8 +121,9 @@ abbr { text-decoration: none; }
 <ul id=services><!-- semantically perhaps <section> or <nav> -->
 	<li><a href=//github.com/johannessen>GitHub</a>
 	<br><a href=//metacpan.org/author/AJNN>CPAN</a>
-	<li><a href=https://snabelen.no/@ajnn rel=me>Fediverse 1</a>
-	<br><a href=https://medibubble.org/@ajnn rel=me>Fediverse 2</a>
+	<li><a href=https://mapstodon.space/@ajnn rel=me>Fediverse EN</a>
+	<br><a href=https://snabelen.no/@ajnn rel=me>Fediverse NO</a>
+	<br><a href=https://medibubble.org/@ajnn rel=me>Fediverse DE</a>
 	<li><a href=//wiki.openstreetmap.org/wiki/User:Arne_Johannessen>OpenStreetMap</a>
 	<li><a href=//www.skgb.de/ hreflang=de onclick="location.href='https://www.skgb.de/author/arne';return false;">SKGB</a>
 	<br><a href=//software.thaw.de/>THAWsoftware</a>
@@ -129,7 +133,7 @@ abbr { text-decoration: none; }
 	<br><a href=//xn--lve-zna.de/>ølve.de</a>
 	<li><a href=/nm/>Notices to Mariners</a>
 	<br><a href=//twitter.com/slaggrunnslinje onclick="location.href='/Attic/slaggrunnslinje/';return false;">Slaggrunnslinje</a>
-	<li><a href=/jobs>Jobs</a>
+	<li><a href=/jobs>Register</a>
 	<br><a>Blog</a>
 	<li><a href=/thesis/>Thesis</a>
 	<br><a href=/~joar0011/ hreflang=de>Teaching</a>
