--- a/arne/index.html
+++ b/arne/index.html
@@ -102,10 +102,10 @@ abbr { text-decoration: none; }
 <footer>
 <ul id=comm><!-- semantically perhaps <section> or <address> -->
 	<li>Arne Johannessen
-	<br>Saudalskleivane 1
-	<br>5136 Mjølkeråen
+	<br>Kuvenbakken 102 A
+	<br>5200 Os
 	<br>Norway <img src="data:image/gif;base64,R0lGODlhFgAQAJEAAMgQAAAgW////wAAACH5BAAAAAAALAAAAAAWABAAAAIvhC8Rcu2f1psuMootzupu2H2AQJaWiZbKyrbuC8fpOZugJFZh3mg8svuNgj/fpgAAOw==" alt="" style="vertical-align: top; margin-left: .2em; position: relative; top: .1ex">
-	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:aj22@thaw.de rel=author>aj22@thaw.de</a>
+	<li><span class=type title="email (preferred)">mail</span> <a href=mailto:aj24@thaw.de rel=author>aj24@thaw.de</a>
 <!--
 	<li><span class=type title="landline phone (with voice mail; good for calls 24/7; not good for texts)">voice</span> <a href=tel:+49.2264.2870877>+49 2264 2870877</a>
 	<li><span class=type>voice</span> temporarily unavailable
@@ -123,7 +123,7 @@ abbr { text-decoration: none; }
 	<br><a href=//metacpan.org/author/AJNN>CPAN</a>
 	<li><a href=https://mapstodon.space/@ajnn rel=me>Fediverse EN</a>
 	<br><a href=https://snabelen.no/@ajnn rel=me>Fediverse NO</a>
-	<br><a href=https://medibubble.org/@ajnn rel=me>Fediverse DE</a>
+	<br><a href=https://zeroes.ca/@ajnn rel=me>Fediverse DE</a>
 	<li><a href=//wiki.openstreetmap.org/wiki/User:Arne_Johannessen>OpenStreetMap</a>
 	<li><a href=//www.skgb.de/ hreflang=de onclick="location.href='https://www.skgb.de/author/arne';return false;">SKGB</a>
 	<br><a href=//software.thaw.de/>THAWsoftware</a>
